RESOLVED FIXED12918
REGRESSION: Google Finance dropdown Flickers
https://bugs.webkit.org/show_bug.cgi?id=12918
Summary REGRESSION: Google Finance dropdown Flickers
Antti Koivisto
Reported 2007-02-27 14:34:04 PST
- go to finance.google.com - enter 'a' to search field so dropdown appears - move mouse over a single dropdown item -> item background flickers while mouse moves <rdar://4988039>
Attachments
test case (1.22 KB, text/html)
2007-02-27 15:09 PST, Antti Koivisto
no flags
don't propage events further from a node that is not in document (29.86 KB, patch)
2007-02-27 15:11 PST, Antti Koivisto
hyatt: review+
Antti Koivisto
Comment 1 2007-02-27 15:09:16 PST
Created attachment 13412 [details] test case events to dead node should not propagate further
Antti Koivisto
Comment 2 2007-02-27 15:11:17 PST
Created attachment 13414 [details] don't propage events further from a node that is not in document If a node dies while mouse is over it, it is still supposed to receive mouseout event (wasn't case in Tiger webkit). However this event should not propagate to any other nodes. This patch matches Firefox behavior in this respect.
Dave Hyatt
Comment 3 2007-02-27 15:18:47 PST
Comment on attachment 13414 [details] don't propage events further from a node that is not in document r=me
Antti Koivisto
Comment 4 2007-02-27 15:26:36 PST
Note You need to log in before you can comment on or make changes to this bug.