LayoutTests:

Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12918
        REGRESSION: Google Finance dropdown Flickers
        <rdar://4988039>

        * fast/events/mouseout-dead-node-expected.checksum: Added.
        * fast/events/mouseout-dead-node-expected.png: Added.
        * fast/events/mouseout-dead-node-expected.txt: Added.
        * fast/events/mouseout-dead-node.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12918
        REGRESSION: Google Finance dropdown Flickers
        <rdar://4988039>

        If a node dies while mouse is over it, it is still supposed to receive
        mouseout event (wasn't case in Tiger webkit). However this event should
        not propagate to any other nodes. This patch matches Firefox behavior in
        this respect.

        * dom/EventTargetNode.cpp:
        (WebCore::EventTargetNode::dispatchGenericEvent):



Canonical link: https://commits.webkit.org/16734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19897 268f45cc-cd09-0410-ab3c-d52691b4dbfc